src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>it will calculate Age of the student.</description>
        <formula>YEAR(TODAY())  -  ( YEAR(Date_of_Birth__c))</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>School Student Date of birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_Annual_Income__c</fullName>
        <description>Father Annual Income will only shown for Govt Affiliated, not for General.</description>
        <label>Father Annual Income</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Age__c</columns>
        <columns>Class__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Father_Name__c</columns>
        <columns>School__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>For General Category</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Govt_Affiliated</fullName>
        <active>true</active>
        <description>For Govt. Affiliated Category</description>
        <label>Govt. Affiliated</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_ValidateStudentDOB</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
Date_of_Birth__c &lt; DATE(1990,01,01),
Date_of_Birth__c  &gt;  TODAY()
)</errorConditionFormula>
        <errorMessage>Sorry !! Your age is invalid type , it should be greater than 1990 or less than today.</errorMessage>
    </validationRules>
</CustomObject>